# DITSB

./: .gitignore  CONTRIBUTING.md  DITSB_v2_Paper.md  DITSB_v2_Paper.tex  LICENSE  PUBLISHING_GUIDE.md  README.md  THEORY.md  THEORY_V2.md  pyproject.toml  requirements.txt  verify_identity.py  verify_nb.py
examples/: compare_architecture.py  demo.py  demo_reward.py  scaling_law.py  train.py  train_lm.py
llm_training/: Colab_Training_Plan_ZH.md  DITSB_Colab_Training.ipynb  DITSB_Colab_WarmStart.ipynb  README.md  config_7b.yaml  predict_performance.py  prepare_data.py  train_llm.py
src/ditsb/: __init__.py  discrete_flow.py  discrete_generate.py  discrete_loss.py  flow.py  fno.py  fno_flow.py  generate.py  hamiltonian_flow.py  hjb_loss.py  implicit_integrator.py  industrial.py  industrial_data.py  loss.py  moe_vector_field.py  rectified_flow.py  reward_flow.py  riemannian_flow.py  sinkhorn_ot.py  symplectic.py  vector_field.py
tests/: test_adjoint_memory.py  test_convergence.py  test_probability_mapping.py
