[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ditsb"
version = "0.3.0"
description = "Dynamic Information Schrödinger Bridge: Continuous-time generative flow matching framework."
readme = "README.md"
authors = [
    { name = "SERHIM Shen", email = "serhim001@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchdiffeq>=0.2.3",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.2.0"
]

[project.urls]
Homepage = "https://github.com/ditsb/ditsb"
