[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ditsb"
version = "0.3.0"
description = "Dynamic Information Schrödinger Bridge: Continuous-time generative flow matching framework."
readme = "README.md"
authors = [
    { name = "SERHIM Shen", email = "serhim001@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
    "scikit-learn>=1.2.0",
    "pyyaml>=6.0",
    "transformers>=4.40.0",
    "accelerate>=0.29.0",
    "bitsandbytes>=0.43.0"
]

[project.urls]
Homepage = "https://github.com/ditsb/ditsb"
